Change status label CSS to fix color and spacing

--- a/common/components/BalanceSidebar/ETHSimple.scss
+++ b/common/components/BalanceSidebar/ETHSimple.scss
@@ -11,6 +11,10 @@
   	margin-bottom: 0.4rem;
   }
 
+  &-button {
+  	margin-bottom: 0.4rem;
+  }
+
   &-logo {
     float: right;
     max-width: 130px;
@@ -35,6 +39,10 @@
     padding: 2px 0 6px;
     text-align: left;
     line-height: 1.7;
+  }
+
+  &-status {
+  	margin-bottom: 0.4rem;
   }
 
   &-section {
